--- a/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">GetMyDriverCardApp</string>
+    <string name="user_profile_picture">User profile picture</string>
+    <string name="facebook_app_id">240792566614726</string>
+    <string name="logout">Logout</string>
+    <string name="sign_in_facebook">Sign in Facebook</string>
+    <string name="sign_in_google">Sign in Google</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
