beta version of the whole authentication

--- a/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="password">Password</string>
     <string name="signup">Signup</string>
     <string name="confirm_password">Confirm password</string>
+    <string name="cancel">Cancel</string>
 </resources>
