--- a/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="cancel">Cancel</string>
     <string name="action_download">Download</string>
     <string name="action_clear">Clear</string>
+    <string name="custom_crouton_image">Custom crouton image</string>
 </resources>
