--- a/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="action_download">Download</string>
     <string name="action_clear">Clear</string>
     <string name="custom_crouton_image">Custom crouton image</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
