--- a/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/values/strings.xml
@@ -15,6 +15,13 @@
     <string name="action_download">Download</string>
     <string name="action_clear">Clear</string>
     <string name="custom_crouton_image">Custom crouton image</string>
+
+    <string name="spinner_title">Select your request type</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_firstcardactivity_list">Items</string>
+    <string name="title_firstcardactivity_detail">FirstCardActivity Detail</string>
     <string name="capture_one_or_more_of_the_following">Capture one or more of the following:</string>
     <string name="id_card">ID card</string>
     <string name="driver_license">Driver license</string>
